--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@hookform/resolvers": "^2.9.11",
     "@nivo/core": "^0.80.0",
     "@nivo/pie": "^0.80.0",
+    "@react-oauth/google": "^0.7.0",
     "axios": "^1.3.3",
     "dompurify": "^3.0.0",
     "moment": "^2.29.4",
