--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.1",
     "sass": "^1.57.1",
     "yup": "^1.0.0"
   },
